# Minigames

./: .gitignore
src/: CMakeLists.txt  main.cpp
src/games/cotlb/: game.cpp  game.h
